plugins {
    id 'java'
    id 'application'
}

sourceCompatibility = 17
targetCompatibility = 17

group = 'codesquad'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'ch.qos.logback:logback-classic:1.5.6'
    implementation 'com.h2database:h2:2.1.214'

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    testImplementation 'org.assertj:assertj-core:3.22.0'
    runtimeOnly 'com.h2database:h2:2.1.214'
}

application {
    mainClass = 'codesquad.Main'
}

jar {
    manifest {
        attributes(
                'Main-Class': 'codesquad.Main'
        )
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

test {
    useJUnitPlatform()
}